Fix: Improve contrast of dark theme by darkening the black

--- a/assets/css/themes/theme-prefers-dark.scss
+++ b/assets/css/themes/theme-prefers-dark.scss
@@ -6,24 +6,29 @@ sitemap: false
 @import "../syntax-highlight-prefers-dark.css";
 @import "mixins/_theme-boilerplate";
 
+$color-black: darken(
+    $color: $color-black,
+    $amount: 10%,
+);
+
 @media (prefers-color-scheme: dark) {
     $color-background: $color-black;
     $color-text: $color-white;
     $color-detail: lighten(
         $color: $color-grey,
-        $amount: 6.854%
+        $amount: 6.854%,
     );
     $color-code: lighten(
         $color: $color-detail,
-        $amount: 6.854%
+        $amount: 6.854%,
     );
     $color-code-background: fade-out(
         $color: $color-detail,
-        $amount: 0.854
+        $amount: 0.854,
     );
     $color-highlight: lighten(
         $color: $color-red,
-        $amount: 6.854%
+        $amount: 6.854%,
     );
     $color-diff-added: #c6e7b9;
     $color-diff-removed: #e7b9c0;
